@@ -535,20 +535,20 @@ if (isset($_REQUEST['Table_ids'])) {
       
     for ($i = 0; isset($_REQUEST[$i]); $i++ ) {
         if (isset($_REQUEST[$i])) { 
-            $table_id = split("US", $_REQUEST[$i]);
+            $table_id = explode("US", $_REQUEST[$i]);
             if (isset($table_id[1])) {
                 $uncommon_table_structure_diff[] = $table_id[1];
             }
-            $table_id = split("UD", $_REQUEST[$i]);
+            $table_id = explode("UD", $_REQUEST[$i]);
             if (isset($table_id[1])) {
                 $uncommon_table_data_diff[] = $table_id[1];
             }
-            $table_id = split("MS", $_REQUEST[$i]);
+            $table_id = explode("MS", $_REQUEST[$i]);
             if (isset($table_id[1])) {
                 $matching_table_structure_diff[] = $table_id[1];
             }
             
-            $table_id = split("MD", $_REQUEST[$i]);
+            $table_id = explode("MD", $_REQUEST[$i]);
             if (isset($table_id[1])) {
                  $matching_table_data_diff[] = $table_id[1];
             }
